<resources>
    <string name="me_app_name">Android Note</string>

    <!-- 个人信息 -->
    <string name="me_user_info">个人信息</string>
    <string name="me_user_avatar">头像</string>
    <string name="me_user_nick">昵称</string>
    <string name="me_user_account">账号</string>
    <string name="me_user_qrcode">二维码</string>
    <string name="me_user_more">更多</string>
    <string name="me_user_name">姓名</string>
    <string name="me_user_sex">性别</string>
    <string name="me_user_set_sex">设置性别</string>
    <string name="me_user_sex_male">男</string>
    <string name="me_user_sex_female">女</string>
    <string name="me_user_birth">出生日期</string>
    <string name="me_user_mobile">手机号</string>
    <string name="me_user_email">邮箱</string>
    <string name="me_user_area">地区</string>
    <string name="me_user_university">大学</string>
    <string name="me_user_signature">个人签名</string>
    <string name="me_user_verified">实名认证</string>
    <string name="me_user_address">我的地址</string>
    <string name="me_user_add_address">新增地址</string>
    <string name="me_user_address_detail">地址详情</string>
    <string name="me_user_edit_avatar">编辑头像</string>
    <string name="me_user_hint_edit">编辑</string>
    <string name="me_user_hint_unverified">未实名</string>
    <string name="me_user_hint_unset">未设置</string>
    <string name="me_user_hint_select_area">选择地区</string>
    <string name="me_user_hint_select_university">选择学校</string>
    <string name="me_user_hint_location">定位</string>

    <string name="me_user_select_province">选择省份</string>
    <string name="me_user_select_city">选择城市</string>
    <string name="me_user_select_area">选择地区</string>
    <string name="me_user_city_list">城市列表</string>

    <string name="me_address_name">收货人&#8195;&#8195;</string>
    <string name="me_address_phone">手机号码&#8195;</string>
    <string name="me_address_area">地区信息&#8195;</string>
    <string name="me_address_detail">详细地址&#8195;</string>
    <string name="me_address_post_code">邮政编码&#8195;</string>
    <string name="me_input_address_name">请输入收货人姓名</string>
    <string name="me_input_address_phone">请输入手机号码</string>
    <string name="me_input_address_area">请输入地区信息</string>
    <string name="me_input_address_detail">请输入详细地址</string>
    <string name="me_input_address_post_code">请输入邮政编码</string>
    <string name="me_address_set_default">设置为默认地址</string>
    <string name="me_address_tag">标签</string>

    <string name="me_date_year">年</string>
    <string name="me_date_month">月</string>
    <string name="me_date_day">日</string>

    <string name="me_user_avatar_camera">拍照</string>
    <string name="me_user_avatar_default">默认头像</string>
    <string name="me_user_avatar_select">选择图片</string>
    <string name="me_user_avatar_upload">头像将上传到第三方审核</string>

    <!-- 设置 -->
    <string name="me_setting">设置</string>
    <string name="me_account_safe">账号与安全</string>
    <string name="me_avatar_type">头像类型</string>
    <string name="me_open_start_video">开启视频启动页</string>
    <string name="me_open_guide">开启引导页</string>
    <string name="me_open_guide_video">开启视频引导页</string>
    <string name="me_open_gesture_pwd">开启手势密码</string>
    <string name="me_night_mode">夜间模式</string>
    <string name="me_clear_cache">清除缓存</string>
    <string name="me_help">帮助</string>
    <string name="me_feedback">意见反馈</string>
    <string name="me_about">关于</string>
    <string name="me_logout">退出登录</string>
    <string name="me_avatar_type_square">方形</string>
    <string name="me_avatar_type_round_angle">圆角</string>
    <string name="me_avatar_type_circle">圆形</string>
    <string name="me_avatar_type_circle_V">圆形 + V</string>

    <!-- 账号与密码 -->
    <string name="me_safe_account">账号</string>
    <string name="me_safe_mobile">手机号</string>
    <string name="me_safe_password">密码</string>
    <string name="me_safe_emergency_contact">应急联系人</string>

    <!-- 关于 -->
    <string name="me_features">功能介绍</string>
    <string name="me_homepage">项目主页</string>
    <string name="me_update">检测更新</string>
    <string name="me_copyright">版权信息</string>
    <string name="me_score">去评分</string>
    <string name="me_share">分享好友</string>
    <string name="me_user_agreement">用户协议</string>
    <string name="me_privacy_agreement">隐私协议</string>
    <string name="me_reward">打赏</string>
    <string name="me_reward_weixin_pay">微信支付</string>
    <string name="me_reward_air_pay">支付宝</string>


</resources>
