<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWindows">

    <com.study.commonlib.ui.view.TopBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tb_title="@string/me_user_info"/>

    <RelativeLayout
        android:id="@+id/rl_user_avatar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_5"
        android:paddingLeft="@dimen/dp_20"
        android:paddingRight="@dimen/sp_20"
        android:paddingTop="@dimen/dp_8"
        android:paddingBottom="@dimen/dp_8"
        android:background="@drawable/selector_item_bg">

        <ImageView
            android:id="@+id/iv_avatar"
            android:layout_width="@dimen/dp_48"
            android:layout_height="@dimen/dp_48"
            android:layout_centerVertical="true"
            android:src="@mipmap/me_logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/iv_avatar"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_centerVertical="true"
            android:text="@string/me_user_avatar"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_16"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/me_user_hint_edit"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/gray_868686"/>

            <ImageView
                android:id="@+id/iv_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_15"
                android:src="@mipmap/icon_arrow_right" />

        </LinearLayout>

    </RelativeLayout>

    <!-- 昵称 -->
    <com.study.commonlib.ui.view.MultiCard
        android:id="@+id/mc_user_nick"
        android:layout_width="match_parent"
        android:layout_height="@dimen/multiCard_height"
        android:layout_marginTop="@dimen/dp_5"
        app:mc_title="@string/me_user_nick"
        app:mc_hasContent="true"
        app:mc_alignRight="true"
        app:mc_contentHint="@string/me_user_hint_unset"
        app:mc_hasDivider="true"/>

    <!-- 账号 -->
    <com.study.commonlib.ui.view.MultiCard
        android:id="@+id/mc_user_account"
        android:layout_width="match_parent"
        android:layout_height="@dimen/multiCard_height"
        app:mc_title="@string/me_user_account"
        app:mc_hasContent="true"
        app:mc_alignRight="true"
        app:mc_contentHint="@string/me_user_hint_unset"
        app:mc_hasDivider="true"/>

    <!-- 二维码 -->
    <RelativeLayout
        android:id="@+id/mc_user_qrcode"
        android:layout_width="match_parent"
        android:layout_height="@dimen/multiCard_height"
        android:paddingLeft="@dimen/dp_20"
        android:paddingRight="@dimen/sp_20"
        android:background="@drawable/selector_item_bg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/me_user_qrcode"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_16"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/dp_32"
                android:layout_height="@dimen/dp_32"
                android:src="@mipmap/me_qrcode" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_15"
                android:src="@mipmap/icon_arrow_right" />

        </LinearLayout>

        <View
            android:id="@+id/v_line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0.5"
            android:background="@color/main_divider"
            android:layout_alignParentBottom="true"
            android:visibility="visible" />

    </RelativeLayout>

    <!-- 更多 -->
    <com.study.commonlib.ui.view.MultiCard
        android:id="@+id/mc_user_more"
        android:layout_width="match_parent"
        android:layout_height="@dimen/multiCard_height"
        app:mc_title="@string/me_user_more"
        app:mc_hasDivider="false"/>

    <!-- 实名认证 -->
    <com.study.commonlib.ui.view.MultiCard
        android:id="@+id/mc_user_verified"
        android:layout_width="match_parent"
        android:layout_height="@dimen/multiCard_height"
        android:layout_marginTop="@dimen/dp_5"
        app:mc_title="@string/me_user_verified"
        app:mc_hasContent="true"
        app:mc_alignRight="true"
        app:mc_contentHint="@string/me_user_hint_unverified"
        app:mc_hasDivider="true"/>

    <!-- 收货地址 -->
    <com.study.commonlib.ui.view.MultiCard
        android:id="@+id/mc_user_shipping_address"
        android:layout_width="match_parent"
        android:layout_height="@dimen/multiCard_height"
        app:mc_title="@string/me_user_shipping_address"
        app:mc_hasContent="true"
        app:mc_alignRight="true"
        app:mc_contentHint="@string/me_user_hint_unset"
        app:mc_hasDivider="false"/>

</LinearLayout>
